--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-community": "^31.0.2",
+    "ag-grid-enterprise": "^31.0.2",
+    "ag-grid-react": "^31.0.2",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
